# llm-product-recommender

./: pyproject.toml
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/api/: routes.py
backend/app/db/: elastic.py
backend/app/interfaces/: docs_fetcher.py  docs_store.py  llm.py
backend/app/llms/: gpt.py
backend/app/services/: index_documents.py  rag.py
backend/tests/: conftest.py
backend/tests/integration_tests/api_tests/: test_index_docs.py  test_rag.py
